# india-stats

./: all-rust.code-workspace  package-lock.json  package.json  run.bash
content/: package-lock.json  package.json
content/src/api/article-page/content-types/article-page/: schema.json
content/src/api/chart/content-types/chart/: schema.json
content/src/api/component/content-types/component/: schema.json
content/src/api/page/content-types/page/: schema.json
content/src/components/chart/: bar-chart.json  single-stat.json
data-analysis/: Cargo.toml
practice/: Cargo.toml
practice/src/: main.rs  polar.rs
site2/: gatsby-browser.js  gatsby-config.js  gatsby-node.js  package.json  tsconfig.json
site2/src/: strapi.js  theme.js
site2/src/@chakra-ui/gatsby-plugin/: theme.js
site2/src/components/: BrowserOnly.jsx  NavBar.tsx  PagesList.jsx  Title.js  Total.js  layout.js
site2/src/components/charts/: BarChart.jsx  HorizontalBarChart.jsx  Map.jsx  SingleStat.jsx  SingleStatsGrid.jsx
site2/src/templates/old-templates/: India-inflation-rate.jsx  andhra-pradesh-budget-analysis-2023-24.jsx  index.jsx  india-echonomic-trend.jsx  road-accidents.jsx
