[package]
name = "practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.33.2", features = ["lazy", "serde","serde-lazy"] }
csv = "1"
rand="0.5.5"
serde = "1.0"
serde_json = "1.0.82"
